*Empty MediaWiki Message*

--- a/منډيگک.mw
+++ b/منډيگک.mw
@@ -1,4 +1,56 @@
-
 [[د افغانستان د پنځه زره کلن تاريخ سرليک( منډيګک )]]
 
 [[لرغونی منډيګک يا په منځنۍ اسيا کي دلومړي مدنيتونو د وصلت ټاټوبی )]]
+==لرغونی منډيګک يا په منځنۍ اسيا کي دلومړي مدنيتونو د وصلت ټاټوبی==
+د تاريخ او لرغونپوهني يو شمير څيړنوکي په دي باور دي چي په لرغونې نړۍ کي تمدنونه ديوه ځانګړي سيمي څخه را زيږيدلي او د نړۍ ګوټ ګوټ ته رسيدلي دي ، خو يو شمير نور پوهان بيا دا ډول انګيرني نه مني او د يوي بلي داسي نظريې وړانديز کوي چي د چا پيريال پر زيرمو او شتو متکي ده. د دي سره سره چي لومړۍ نظريې د نولسمي پيړۍ په اوږدو کي پوره واکمني درلوده ، خو د شلمي پيړۍ د پيل سره سم د چاپير يال پر زيرمو اوشتمنيو متکي نظرياتو زور واخست او د نړۍ د زيات شمير پوهانو د پام وړ وګرځيدله . د ورستۍ نظريې پراختيا نه يوازي داچي د پوهانو د هر اړخيزي څيړني لپاره زمينه برابره کړه بلکي هغه خنډونه يې هم د پوهانو او څيړونکو له مخي ليري کړل چي په يوه يا بل ډول بايد د ټاکلي مرکز سره د اړيکو د پيداکيدلو په اړه مکلف وه .
+د (( چاپير يال )) تر سر ليک لاندي اوډل شوې نظريه د لرغونو مدنيتونو د څيړني داسي ډول او بڼه ده چي له يوه سره د (( ځانګړي مر کز )) ټولي نظريې د ردولو او نه منلو اراده نه لري بلکي د هغو برخو پوره ملاتړ کوي چي پر چاپيريالي بنسټ ولاړي دي ، د بيلګي په توګه دا ټکۍ د دواړو نظريو تر منځ د يوه څرګند ا صل په توګه منل کيږي چي : د انساني ټولنو تر منځ د پر له پسې اړيکو په نتيجه کي د هغو ټولنو په کلتورونو او دودونو کي ګډاو ورته مشخصات منځ ته راځي ؛ ( ٣ :٤١) په نړۍ کي داډول بيلګي د څيړونکو له خوا په زياته پيمانه وړاندي شويدي ، چي د منډيګک لرغونې سيمه هم د دي ډلي يوه غوره بيلګه ده .
+منډيګک د منځنۍ اسيا د هغو مرکزونو سره پرله پسې اړيکي درلودۍ چي په سيمي کي د لومړي مدنيتونو ټا ټوبي ګڼل شويدي ، د بيلګي په توګه د منډيګک شمال لوري ته (( انو )) او (( نماز ګاه تپه )) لويديځي خوا ته (( سيالک ))او (( سيستان )) او سهيلي لوري ته د (( موهنجودارو )) او (( هرپې )) مدنيتونو يادولای شو . د ياد شويو سيمو سره د منډيګک د اوسيدونکو اړيکي هم د يوه داسي مرکز په توګه دوام موندلۍ چي نه يوازي د خپلي حوزي يو مدني مرکز و ، بلکي د نوموړو سيمو تر منځ د اړيکو او وصلت ټاټو بۍ هم و . ( ١ : ١٧ ) 
+انو او نماز ګاه تپه دتر کمنستان هيواد دوې هغه لرغوني سيمي دي چي د نوموړي هيواد تاريخي جرړي څه ناڅه پنځه زره کاله وړاندو زمانو ته رسوي . د انو لرغوني سيمه په اتفاقي توګه د روسي افسر جنرال کماروف له خوا په ( ١٩٠٤ ) ميلادي کال وپيژندل شوه او ورپسې د امريکايې لرغونپوهانو له خوا چي مشري يې پامپيلي پر غاړه وه او تر هغه وروسته جرمني لرغونپوهانو له خوا چي مشري يې د شميت پر غاړه وه تر ( ١٩٤٨ ) ميلادي کال پوري په پر له پسې توګه تر سپړني او څيړني لاندي ونيول شوه . او د نماز ګاه تپي سيمه چي د هغه هيواد بله نامتو لرغونې سيمه پيژندل شويده ، هم د انو په څير د ترکمنستان د لومړي مدنيتونو يو ځانګړۍ ټاټوبۍ ګڼل کيږي . نوموړې سيمه چي څه ناڅه ( ١١ ) هکتاره مځکه را نغاړي او د يوې لويې غونډۍ په څير چي لوړوالۍ يې ( ٣٢ ) متره ته رسيدۍ د اور ګاډي اوسپنيزي ليکي ته څيرمه د (کا اخکا ) تم ځای ته نږدې پرته ده .
+
+[[Image:turkmnistan-kala.jpg|thumb|د تر کمنستان د يوې لرغوني کلا پاتي شوني]]
+
+د لرغونپوهانو بيلا بيلو سپړنو او څيړنو وښودل چي دتر کمنستان دا دوي لرغوني سيمي د انيوليتيک دوري د پيل سره د وګړو لويو قومونو کارولي او په پر له پسي توګه يې دبرونزو د پير تر ورستيو زمانو پوري ورڅخه ګټه پورته کړيده ، چي زماني واټن يې د ميلاد څخه لږ تر لږه ( ٣٠٠٠ ) درې زره کاله وړاندي وختونه په برکي نيسي . د انو او نمازګاه تپي څخه په زياته پيمانه داسي اثار او لرغوني توکي په لاس راغلي چي يو او بل ته ورته او ګډ مشخصات لري د بيلګي په توګه د دواړو سيمو څخه د خاورينو لوښو هغه ډولونه تر لاسه شويدي چي د منظمو هندسي شکلونو لرونکي دي ؛ د دواړو سيمو څخه د کار هغه ډول وسايل تر لاسه شويدي چي د کرهڼي او للمي کر لپاره کارول شويدي ؛ د ښځو مجسمي هم يوله هغو اثارو څخه ګڼل کيږي چي د انو او نمازګاه تپي سيمو څخه تر لاسه شويدي ؛ خو هغه ارزښتمن اثار چي د انو او نمازګاه تپي څخه تر لاسه شوي دي، هغه د دي دواړو سيمو د اوسيدونکو ټاټوبي دي ؛ نوموړو اوسيدونکو د خپل اوسيدو ځايونه د يوې ستري کلا په څيرودان کړي او په هره کلا کي به ديوه رګي( رشته خوني ) اړوندکسان اوسيدل،او په بله لويه کلاکي دبل رګي اړوندانو ژوند کاوه ؛(٢: ٦٥ )
+
+[[Image:turkmnistan-kala-2.jpg|thumb|د تر کمنستان د يوې لرغوني کلا]]
+
+د منډيګک لويديځ لورته د سيالک او سيستان مدنيتونه غوړيدلي وه ، چي هر يوه د ځانګړو مميزاتو برسيره د ګاونډيو مدنيتونو څخه د اخستني او کلتوري ورته ووالي مشخصات هم په خپلو اثارو او پاتي شونو کي ساتلي دي . لرغونپوهانو د سيالک او سيستان څخه د لرغوني مدنيت هغه اثار او شواهد تر لاسه کړيدي ، چي په سهيل کي د موهنجودارو ، او هرپي ، په شمال کي د انو او نماز ګاه تپي او په ختيځ کي د منډيګک سره په ورته پيړيو کي منځ ته راغلي او وده يې کړي وه .( ٥ : ١٩٤ )
+<br>
+د سيالک تپه د لومړي ځل لپاره د فرانسوي لرغونپوه ګيرشمن له خوا د ١٩٣٣ څخه تر ١٩٣٧ ميلادي کالو نو پوري تر سپړني او څيړني لاندي ونيول شوه ، چي په نتيجه کي د بيلا بيلو کلتوري طبقو څخه زيات ارزښتمن اثار تر لاسه شول . د سيالک تپي لومړي کلتوري طبقه د انيو لتيک دوري پوري اړوند ګڼل شويده ، د نوموړي طبقي څخه د کرهڼي لپاره کاريدونکي وسايل ، د حيواتاتو د کورني ګرځيدلو نښانې او د مسي او برونزي وسايلو د کارولو زياتي پاتي شوني د لرغونپوهانو له خوا تر لاسه شوي او څيړل شويدي . د دي سره سره د سيالک تپې څخه د لويو کورنو د شته والي داسي بيلګي هم را برسيره شويدي چي د انو ، منديګک ، او موهنجودارو په څير په هغو ودانيو کي هم لويو قومونو او قبيلو ژوند کړيدۍ . ( ٣: ٢٣٣ ) 
+<br>
+لر غونۍ سيستان د اوسني نيمروز ولايت هغه برخه ده چي د افغانستان او اوسني ايران تر منځ په سهيل لوديځه سرحدي کرښه واقع دۍ . د سيستان سيمه په ١٨٧٣ ميلادي کال د انګريزانو په منځګړيتوب په ختيځ او لويديځ سيستان وويشل شوه ، د سيستان په داوړو خوا کي د لرغونپوهانو لخوا سپړني او څيړني تر سره شويدي . د ١٩١٥ څخه تر ١٩١٦ ميلادي کالونو په تر ځ کي د انګليسي لرغونپوه اورل ستين په مشري سپړني او په ١٩٢٥ ميلادي کال د امريکايې لرغونپوه هيرتسفيلد تر مشري لاندي په لويدځ سيستان کي سپړني او څيړني تر سره شويدي . په همدي ډول په ١٩٥٩ميلادي کال د فرانسوي لرغونپوهانو ټيم چي مشري يې د فرانسوي لرغونپوه هاکن پر غاړه وه ، په ختيځ سيستان کي سپړني او څيړني تر سره کړې ، چي په نتيجه کي د دواړو برخو څخه د لرغونو زمانو او په ځانګړي توګه د انيوليتيک پير څخه بيا تر اوسپني دوري پوري په پرله پسې توګه اثار او پاتي شوني تر لاسه شويدي .
+<br>
+هغه څيړني چي ناد علي او زرنج په سيمو کي د ګيرشمن اوهاکن لخواپه ( ١٩٣٦ ) ميلادي کال تر سره شوي ، په نتيجه کي زيات شمير داسي اثار لکه رنګه خاورين لوښي ، ګاڼې ،ډبرين وسايل او د حيواناتو ځني هډوکي تر لاسه شول ،چي د انو او مرو اثارو سره ورته والۍ لري . ( ٥ : ٣ )
+<br>
+او همدا ډول د خاورينو لوښو پر مخ د هندسي شکلونو او ښکلو انځورونو رسمول ، ښځينه ډوله وړکي مجسمي جوړول ، د نورو ګاونډيو مدنيتونو په څير په لويو کورونو کي اوسيدل ، د مسي او برونزي وسايلو څخه ګټه اخستل هغه مميزات دي چي د سيستان د پنځه زره کالو وړاندو زمانو او سيدونکو دپيژندلو لپاره معياري ګرځيدلي دي او په ځانګړي توګه د کرهڼي زيات رواجول او ان تر دي حده چي د روسي لرغونپوه واويلوف په وينا د سيستان اوسيدونکو تر ټولو ګاونډيو سيمو لومړۍ د کر کرهڼي چاري پيل کړيدي ، او نوموړي لرغونپوه لرغونۍ سيستان د خپل وخت د غنمو ګډام ګڼلۍ دۍ .
+<br>
+
+[[Image:sistani-kala-afghanistan.jpg|thumb|په افغاني سيستان کي يوه لرغونې کلا]]
+
+
+مو هونجو دارو او هر په د سند په حوزې کي دوه لرغوني ښارونه دي چي د دو سندونو ( سراسواتي او سيند ) پر غاړو پيڅکو منځ ته راغلي او وده يې کړيده . د موهونجودارو لرغونې سيمه چي د سر جان مارشال انګليسي لرغونپوه په لار ښونه په ١٩٢٢ ميلادي تر سپړني او څيړني لاندي ونيول شوه ، په زياته پيمانه دلرغوني مدنيت اثار او وسايل تر لاسه شويدي . د دي لرغوني سيمي څخه د لومړۍ کلتوري طبقې اثار چي د کالکوليتيک پير استازيتوب کوي ، په زياته پيمانه د لرغوني کندهار او په ځانګړي توګه د منديګک له اثارو سره ورته والۍ لري . د مارشال په اند له موهونجودارو څخه تر لاسه شوي اثار او په خاصه توګه د لرغوني مدني ژوندانه نښي دا څرګندوي چي د دي سيمي اوسيدونکي د ميلاد څخه دري او څلور زره کاله پخوا کالونو کي د يوه نامتو مدنيت په منځ ته راوستلو بريالي شويدي . 
+
+[[Image:mohanjadaro-1.jpg|thumb|د موهنجودارو د لرغوني مدنيت د پاتي شونو بيلګي]]
+[[Image:mohanjadaro-2.jpg|thumb|د موهنجودارو د لرغوني مدنيت د پاتي شونو بيلګي]]
+
+د موهنجودارو څخه د ودانيو داسي منظم سيستم ترلاسه شويدۍ چي په څرګنده توګه د يوه پرمختللي مدنيت استازيتوب کوي . د موهنجو دارو کورونه په ترتيب يو دبل تر څنګ او يوله بله په يوه ټاکلې فاصله کي ودان شويدي . د کورونو او ودانيو لپاره د منظم کاناليزاسيون شته والۍ بل هغه سند کيدای شي چي د پرمختللي او د خپل پير د ستر تمدن نوم ورته ورکړل شي . و د ودانيو د جوړولو سيستم څخه داسي بريښي چي د موهنجودارو اوسيدونکي د خپل ګاونډيو سيمو د اوسيدونکو څخه د خپل پير د پرمختيا په يوه نسبتا لوړه پوړۍ کي وه . خو د موهنجودارو په اثارو کي ددې ځانګړيتوب سره سره بياهم د ګاونډيو سيمو سره د اړيکو اثرات څرګند دي . 
+<br><br>
+اما منډيګک : د کندهار يوه تر ټولو وتلي لرغونې سيمه او د کالکوليتيک پير ارزښتمن ټاټوبۍ منډيګک دۍ . منډيګک نه يوازي داچي زموږ د هيواد د لرغوني تاريخ سرليک منل شويدۍ ، بلکي په سيمه او ګاونډيو هيوادونو کي هم جوت او نامتو ځاي لري . دمنډيګک سپړنه او څيړنه د فرانسوي لرغونپوه مسيو کزل تر لارښوني لاندي له ١٩٥١ څخه تر ١٩٥٩ ميلادي کال پوري په پرله پسې توګه تر سره شول . په منډيګک کي د لومړۍ دوري سروې او څيړنو وښودل چي دا لرغونې غونډۍ په پرله پسې توګه د پخوانيو انساني ټو لنو او پراخو قبيلو له خوا کارول شويده . په منډيګک کي هم د لويو کلاو شتون ، او په هغو کلاو کي د زياتو انسانانو ژوند کولو نښي نښانې دا څرګنده وي چي د انو او نمازګاه تپې سره په شمال ، او هم د سيالک او سيستان له اوسيدونکو سره په لويديځ ، او بيا په ځانګړي توګه د سهيل په لور د موهنجودارو او هرپې اوسيدونکو سره يې د نورو کلتوري او سوداګريزو اړيکو تر څنګ د ودانولو او کورجوړولو په اړه هم يوله بله متاثر شويدي . شمت او پامپيلي په انو اونمازګاه تپه کي د خاورينو لوښو هغه ټوټې تر لاسه کړې چي د شکل او فورم له مخي يې د منډيګک او سيستان د خاورينو لوښو سره پوره ورته والۍ درلود . فرانسوي لرغونپوه ګيرشمن په
+<br><br>
+سيالک او هم بل فرانسوي لرغونپوه هاکن په افغاني سيستان کي د خاورينو لوښو پر مخ هغه نقشۍ او رسامۍ وليدلې چي د پيچک ګل ( ګل عشقه پيچان ) په زياته پيمانه ترسيم شوۍ دۍ ، چي دي رساميو ته ورته رسامي د موهنجودارو او هرپې په خاورينو لوښوکي هم په پوره وضاحت څرګنديږي ، چي دا په رښتيني ډول د منډيګک د لرغونو خاورينو لوښو يوه ستره مميزه او بيلګه منل شويده .
+لنډه دا چي د منډيګک او نورو شا اوخواسيمو تر منځ د پر له پسې اړيکو شتون ، د زيات شمير لرغونپوهانو له خوامنل شوۍ او د ثبوت لپاره يې شواهد وړاندي کړي ، چي د دې ليکني د پايلي او نتيجې په توګه د يوشمير لرغونپوهانو هغه يادوني او څرګندوني را وړم چي د منډيګک او نورو ګاونډيو سيمو تر منځ يې اړيکي څيړلي اوتائيد کړيدي . ا مريکايې لرغونپوه ( فيرسرويس ) په دي باوردۍ چي د موهنجودارو او هرپې په لرغونو سيمو کي د خاورينو لوښو پر مخ د پيچک ګل د پاڼو رسامي د منديګک د لرغوني سيمي څخه د موهنجودارو سيمي ته را ليږدول شويده ؛( ٩ : ١٣٢ ) د هارورډ پوهنتون استاد ( بنجامن رولاند ) په اند ، د موهنجودارو او منډيګک تر منځ د اړيکو يوه بيلګه دخاورينو لوښو پر مخ د پيچک ګل د پاڼو رسامي ده خو هغه څه چي تر دي اړيکو زيات څه ښودلای شي هغه د منډيګک او موهنجودارو د اوسيدونکو تر منځ د رواني او عقيدتي يوالي بيلګه او نښانې دي چي د ډبرينو مجسمو په څير يې انعکاس کړيدۍ . په موهنجودارو او هم په منډيګک کي د ډبرو پر مخ د انسان د سره څيري او شکلونه په داسي انداز حک او کښل شويدي چي ورته والۍ يې له ورايه بريښي ؛( ٥ : ١٨ ) د مرحوم استاد کهزاد له نظره د منډيګک څخه تر لاسه شوي د غلو دانو ګدامونه چي مستطيل شکله جوړ شويدي ، د هغو ګدامونو سره پوره ورته والۍ لري چي د مارشال له خوا په موهنجوداروکي پيداشويدي ؛ ( ٨ : ٩ ) ډ . اچ . سانکاليا په دي باور ده چي د منډيګک او موهنجودارو تر منځ د نورو مشابهتونو ترڅنګ د معابدو ورته والۍ هم څرګند دۍ ، هغه معبد چي د مسيو کزل له خوا په منډيګک کي ترلاسه شويدۍ ، په هم هاغه ډول ډيري ضلعي لري کوم چي د سرجان مارشال له خوا په موهنجوداروکي ترلاسه شويدۍ ؛ ( ٦ : ١١٥ ) .
+<br><br>
+[[Image:mendigak-kandahar.jpg|thumb|د کندهار د منديګک د کلا يوه برخه]]
+
+ليکوال : پوهنوال رسول باوري
+
+اخځونه د الفبا په ترتيب
+<br>
+1__ باوري ،محمد رسول . د افغانستان لومړي مدنيتونه . ( کابل د کابل پوهنتون مطبعه ) . ١٣٦٧ .<br>
+٢ __ بهمنش ، احمد تاريخ ملل قديم اسيايې غربي ( تهران : دانشګاه تهران ) ١٣٤٧ .<br>
+٣ __چايلد ، ګوردن . سير تاريخ ، مترجم : احمد بهمنش . ( تهران : دانشګاه تهران )١٣٤٦ .<br>
+٤ __ حبيبي ، عبدالحی . تاريخ مختصر افغانستان . ( کابل مطبعه دولتي ) ١٣٤٦ . <br>
+٥ __ راولند ، بنجامن . هنر قديم افغانستان . مترجم : احمد علي کهزاد . (کابل مطبعه معارف )١٣٤٦ .<br>
+٦ __ سانکاليا . اچ . ډ . (( منډيګک )) مترجم : عتيق زوي . باستا نشناسي افغانستان . ( کابل : مطبعه دولتي ) ١٣٥٨ .<br>
+٧ __ خانيان ، خسرو . (( روابط فرهنګهاي کالکوليتيک )) . بر رسيهای تاريخی . ( تهران : مطبعه شاهنشاهي ) شماره ششم ، ١٣٥٠ .<br>
+٨ __ کهزاد ،احمدعلي . افغانستان در پرتو تاريخ . ( کابل : مطبعه دولتي ) . ١٣٤٦ .<br>
+٩ __ واستوا . شيري . (( په افغانستان کي د پروتوهستوري ... څيړني )) ژباړونګۍ : زمرۍ محقيق . د افغانستان لرغونپيژندنه ( کابل : دولتي مطبعه ) ١٣٦٤ .<br>
