فارسی سازی ارقام

--- a/غازي_محمد_ايوب_خان.mw
+++ b/غازي_محمد_ايوب_خان.mw
@@ -1,15 +1,14 @@
-{{delete|english and not pashto}}
+[[انځور:SardarMuhammadAyoubKhan.JPG|thumb|289px|غازي محمد ايوب خان]]
+[[انځور:Ayub Khan.jpg|thumb|ايوب خان]]
 
-[[Image:SardarMuhammadAyoubKhan.JPG|thumb|289px|غازي محمد ايوب خان]]
-[[Image:Ayub Khan.jpg|thumb|Ayub Khan]]
-{{dablink|For other uses see [[Ayub Khan (disambiguation)]].}}
-'''Ayub Khan''' ([[1857]] ([[Kabul]]) - [[April 7]] [[1914]] ([[Lahore]]) was also known as '''The Victor of [[Battle of Maiwand|Maiwand]]''' or '''The Afghan [[Charles Edward Stuart|Prince Charlie]]''' and was, for a while, the governor of [[Herat]]. His father was [[Sher Ali Khan]] and his mother was the daughter of an influential [[Mohmand]] chief of Lalpura, Saadat Khan. On [[July 27]] [[1880]] he defeated General Burrows at the [[Battle of Maiwand]] and went on to besiege the British at [[Kandahar]]. On [[September 1]] [[1880]] he was defeated and routed by [[General]] [[Frederick Roberts]] at the [[Battle of Kandahar]], which saw the end of the [[European influence in Afghanistan#The Second Anglo-Afghan War|Second Afghan War]]. A year later Ayub tried again to take Kandahar, this time from [[Abdur Rahman Khan]], the Amir, but again failed. In [[1888]] Ayub Khan left [[Persian Empire|Persia]] (now [[Iran]]), where he had escaped to, and became a [[pensioner]] in [[British India]] until his death in [[1914]]. His body was interred near the [[shrine]] of Sheikh Habib at Durrani graveyard [[Peshawar]].
+'''غازي محمد ايوب خان''' (۱۸۵۷، [[کابل]] - د اپرېل ۷، ۱۹۱۴ [[لاهور]]) چې انګرېزان يې د '''The Victor of [[Battle of Maiwand|Maiwand]]''' يا '''The Afghan [[Charles Edward Stuart|Prince Charlie]]''' په نومونو هم يادوي، د افغانستان پخوانی والي او د مېوند د جګړې فاتح و. ايوب خان د شېر علي خان ځوی وه او د نومړې مور د لالپورې د مومندو مشر، سادت خان لور وه. په ۲۷ د جولای ۱۸۸۰ کال کې هغه انګرېز جنرال بارو ته د مېوند په جګړه کې ماتې ورکړه او بيا يې په کندهار کې د انګرېزانو پوځ محاسره کړ. په ۱ د سېپتمبر ۱۸۸۰ کال کې يې د انګرېزي جنرال فرېدرېک روبرټس نه د کندهار په جګړه کې ماتې وخوړه. او په همدې توګه د افغان انګرېز دهمه جګړه پای ته ورسېده. يو کال وروسته بيا ايوب خان د کندهار د نيولو تکل وکړ، خو دا ځل بيا د امير عبدالرحمن خان له خوا ماتې سره مخامخ شو. په ۱۸۸۸ کال کې ايوب خان له ايران نه ولاړه او په برتانيوي هند کې تر خپلې مړينې واوسېده. د ايوب خان قبر د پېښور د دُرانيو په هديره کې د شېخ حبيب مقبرې کې ځای لري.
 
-== External links ==
+== باندنۍ تړنې ==
 [http://jang.com.pk/thenews/mar2007-weekly/nos-25-03-2007/foo.htm#1 Here lies the Victor of Maiwand by Dr. Ali Jan]
 
-[[Category:Afghan people|Khan]]
-[[Category:Pashtun people]]
+[[وېشنيزه:افغانان]]
+[[وېشنيزه:پښتانه]]
+[[وېشنيزه:غازيان]]
 
 [[de:Mohammed Ayub Khan (Afghanistan)]]
 [[en:Ayub Khan (Afghan commander)]]
