*Empty MediaWiki Message*

--- a/علي_احمد_جلالي.mw
+++ b/علي_احمد_جلالي.mw
@@ -1,4 +1,4 @@
-[[Image:F|thumb|289px|علي احمد جلالي]]
+[[Image:Ali_Ahmad_Jalali.jpg|thumb|289px|علي احمد جلالي]]
 علي احمد جلالي ، د غلام جيلاني جلالي زوی ، د کورنيو چارو وزير
 د امريکا غږ خپرونې مخکينی مشر چې په تېرو نژدې دوو کلونو کې د کورنيو چارو وزير دی .
 مشر لارښو د، دافغانانو دملی وياړ شخصيت ،او دنړيوالو نوميالي پروفيسور شاغلي استاد علی احمد "جلالی"
