*Empty MediaWiki Message*

--- a/سولگر.mw
+++ b/سولگر.mw
@@ -1,3 +1,4 @@
+کمپیوټر یوه برقی دستګاه ده، چی کولای شی په ډیر لږ وخت کښی ډیرې ګرانې حسابي ستونزې حل کړی . دغه آله یاوسیله د جمعې ،تفریق ،ضرب ، بقسیم عملیې تر سره کوي . کمپیوټر ته برقې ماغزه وایي . کمپیوټر هم زمونږ د مغزو په څیر کولای شي د ډیرو هغومسایلو له پاره چې کمپیوټرته سپارل شوې دي ، د حل لارې او طریقې وړاندیز کړي او هم کولای شي ، چې خپل اشتباهات په ګوته او هغه اصلاح کړي . کمپیوټر د حافظې له یو مرکز څخه برخمن دی . دغه مرکز ددې توان لري ، چې زیات اطلاعات زیرمه کړي . د حافظې بټنې ته په فشار ور کولوسره ټول هغه اطلاعات چې زیرمه شوي د اړتیا په مهال د دویم ځل له پاره په اختیار کې واقع کېږي . لومړی د یوې موضوع د حل له پاره باید کمپیوټر ته پروکرام یا کړنلاره ورکړل شي . د لومړي ځل له پاره لومړی کمپیوټر د امریکا په هاروارد پوهنتون کښی په ۱۹۴۴ میلادي کښی طرحه او جوړ شو. دغه کمپیوټر پروفیسر هوارد ایکن او مرستندویانو یې جوړ کړ. د ماشینونو جوړولو نړیوال تجارتي شرکت IBM ددغه کمپیوټرپه بشپړولو کښی ډېرتعاون درلود. داکمپیوټر د آی .بي.ایم هاورډ په نوم ونومول شو. له دغې اختراع را وروسته د کمپیوټر یېلابېل ډولونه مطرح شول .
 کمپيوټر يوه داسي آله يا ماشين دی چي د ورکړل سوي پروګرام په مرسته پر خبرتياو يا ډاټا باندي کارکوي. دغه خبرتياوي  شمېرو نه يا اعداد، ليک، انځورونه او يا هم ږغونه کېدلای شي. 
 
 == کمپيوټر ==
