--- a/سولگر.mw
+++ b/سولگر.mw
@@ -1,6 +1,33 @@
 کمپیوټر یوه برقی دستګاه ده، چی کولای شی په ډیر لږ وخت کښی ډیرې ګرانې حسابي ستونزې حل کړی . دغه آله یاوسیله د جمعې ،تفریق ،ضرب ، بقسیم عملیې تر سره کوي . کمپیوټر ته برقې ماغزه وایي . کمپیوټر هم زمونږ د مغزو په څیر کولای شي د ډیرو هغومسایلو له پاره چې کمپیوټرته سپارل شوې دي ، د حل لارې او طریقې وړاندیز کړي او هم کولای شي ، چې خپل اشتباهات په ګوته او هغه اصلاح کړي . کمپیوټر د حافظې له یو مرکز څخه برخمن دی . دغه مرکز ددې توان لري ، چې زیات اطلاعات زیرمه کړي . د حافظې بټنې ته په فشار ور کولوسره ټول هغه اطلاعات چې زیرمه شوي د اړتیا په مهال د دویم ځل له پاره په اختیار کې واقع کېږي . لومړی د یوې موضوع د حل له پاره باید کمپیوټر ته پروکرام یا کړنلاره ورکړل شي . د لومړي ځل له پاره لومړی کمپیوټر د امریکا په هاروارد پوهنتون کښی په ۱۹۴۴ میلادي کښی طرحه او جوړ شو. دغه کمپیوټر پروفیسر هوارد ایکن او مرستندویانو یې جوړ کړ. د ماشینونو جوړولو نړیوال تجارتي شرکت IBM ددغه کمپیوټرپه بشپړولو کښی ډېرتعاون درلود. داکمپیوټر د آی .بي.ایم هاورډ په نوم ونومول شو. له دغې اختراع را وروسته د کمپیوټر یېلابېل ډولونه مطرح شول .
 کمپيوټر يوه داسي آله يا ماشين دی چي د ورکړل سوي پروګرام په مرسته پر خبرتياو يا ډاټا باندي کارکوي. دغه خبرتياوي  شمېرو نه يا اعداد، ليک، انځورونه او يا هم ږغونه کېدلای شي. 
 
+کمپيوټر (Computer) يوه انګرېزي کلمه ده چې د شمېرونکي مانا لري. دا نوم ددې لپاره ورته ټاکل شوی چې په لومړي ځل کمپيوټر د شمېرلو په موخه جوړ شوی وه.
+کمپيوټر يوه داسي آله يا ماشين دی چي د ورکړل سوي پروګرام په مرسته پر خبرتياو يا ډاټا باندي کارکوي. دغه خبرتياوي  شمېرو نه يا اعداد، ليک، انځورونه او يا هم ږغونه کېدلای شي. 
+
+=='''کمپيوټر:'''==
+کمپيوټر ددوه برخو څخه جوړ شوی دی. ١- [[پوستکالي]] (سافټ وير) ٢- [[کلک کالي]] (هارډوير)
+پوستکالي (سافټ وير) کولاي شي په سترګو يي وګورۍ خو لمس کولای يې نه شئ چې د کمپيوټر ټول پروګرامونه د کمپيوټر پوستکالي دي.<br>کلک کالي (هارډ وير) کولاي شئ چې په سترګو وګورئ او لمس يې کړئ لکه [[Monitor]], [[CPU]], [[Keyboard]], [[Mouse]] او داسي نور.
+
+==کمپيوټر لنډه تاريخچه او پر مختګ==
+
+کمپيوټر يو بريښنايي (الکترونيکي) [[ماشين]] دی چې د محاسبي، انجنيري، [[روغتيا]]، [[هنر]] او د [[ژوند]] په نورو برخو کې کارول کيږي. 
+
+=='''کمپيوټر څه وخت، چيرته، د چا له خوا او څنګه جوړشو؟'''==
+
+٢٥٠٠ کاله پخوا يو ماشين په [[چين]] کې [[جوړ]] او د Abacus په نوم ونومول شو چې په حقيقت د کمپيوټر تاريخچه له همدي ځايه شروع شويده چې دغه ماشين اوس هم په اسيايي ملکونوکې د استفادي وړ دي. <br><br> نوموړي ماشين په واقعيت کې د اوسنې حساب ماشين (کالکوليټر) څخه عبارت دي، چې دلومړي ځل له پاره په چين کې جوړ شوي و او د جمعي، منفي،[[ضرب]] او [[تقسيم]] عمليوله پاره ورڅخه کار اخستل کيده.
+
+وروسته له دي څخه يو بل عالم چې چارليس بابيچ نوميده د ١٨٢٢ څخه تر ١٨٧١ عيسوي کلونو په منځ کې يو بل ماشين په [[لندن]] کې جوړ کړ چې د [[الجبر]] ډيري ستونزي په کې حل شوي وي او دغه ماشين يې د [[Babbage]] په نوم ونوماوه.
+
+نوموړي عالم ددغه ماشين له پاره د ٦٠٠٠ ډالره د خپلو شخصي او ١٧٠٠٠ ډالره د وخت د برتانيي په مالي مصرف جوړ کړ چې دغه [[اختراع]] د هغي پيړۍ تر ټولو ستره او مهمه اختراع بلل کيده.<br> وروسته له دي څخه يو بل ماشين د [[جنوري]] په ٨ نيټه او١٨٨٩عيسوي کال کې د [[ډاکټر هارمن هولريټ]] لخواد [[امريکا]] په متحده ايالاتو د [[نيويارک]] د ښار د وګړو شميرني له پاره جوړ شو او وروسته له دي څخه په ١٨٩٦ عيسوي کال کې نوموړي ډاکټر تصميم ونيوه چې يوه کمپني جوړه او خپله جوړه کړي اختراع د [[تجارت]] بازارته وړاندي کړي چې دغه کمپنۍ يې د [[ای بي ايم]] [[IBM]] په نوم ونوماوله.<br> <br>لومړنۍ عصري او [[ډيجيټل]] کمپيوټر په ١٩٣٩-١٩٤٢ عيسوي کلونو په منځ کې د اوا سټيټ [[پوهنتون]] يو پروفيسر له خوا جوړ او د ABC په نوم ونومول شوو. نوموړ عالم د فزيک او احصائي پروفيسر و چې [[جان ايټنساف]] John Atanasoff نوميده او [[Iowa State University]] يو فارغ شوی زده کوونکی هم په دي ټيم کې برخه درلوده چې [[Clifford Berry]] نوميده. 
+
+کله چې نوموړي کمپيوټر سرته ورسيد نو ٧٥٠ پوند وزن يي درلود او ٣٠٠٠ بت [[Bits]] چې د ٠.٤ [[کيلو]] بيټه [[KB]] سره [[مساوي]] دی د ډيټا د ساتلو وړتيا يي درلوده او همدارنګه د ننې کمپيوټر سره يي مشابه و چې د Binary arithmetic, parallel processing, regenerative memory, separate memory and computer function. سيستمونه يي هم درلوده. <br>وروسته له دي څخه په ١٩٤٥ عيسوي کال کې نوموړي ماشين ته د John او Presper Ekert لخوا په شريک ډول په University of Pennsylvania’s Moore School of Electrical Engineering کې نور هم پرمختګ ورکړل شو او د ENIAC (Electronic Numerical Integrator and Computer) په نوم ونومول شوچې په سلونو او زرونو ترانسيستورونه، کاپاسيټورونو،19000 Vacuum Tubes، 1500 Relays او د ٣٠ ټنه وزن، لرونکي وو چې ٢٠٠ کيلواټه بريښنا ته يې اړتيا درلوده چې وروسته بيا دغه ماشين د امريکا د متحده ايالاتو د استخباراتو او د دفاع وزارتونو له خوا په کار وړل کيده.
+
+که چيري د نوموړي ماشين جوړښت ته پام وکړو دغه ماشين داسې پروګرام شوي و چي د لګولو اوبندولو له پاره يي د کيبلونو څخه کار اخستل شوي و او د اوسنې کمپيوټر سره يې ډير ورته والی لره
+
+يوه بله مهمه اله چې د کمپيوټر د تاريخچي سره تړاو لري Colossus وه ، دا د [[انګلستان]] د دولت او پروفيسر ماکس ناوان د يوې پټې څيړنۍ په نتيجه کې منځ ته راغی او د ١٩٤٣ عيسوي کال د ډسمبر په مياشت کې سرته ورسيد، د دويم نړيوال جګړې څخه وروسته يو ډير مهم پرمختګ بلل کيږي.
+
+د پورتنيو درې الوڅخه کمپيوټر منځ ته راغي او تر ننه پوري د کمپيوټر ډير پرمختللي او راز راز ډولونه په بازار کې موجود دي.
+
 == کمپيوټر ==
 کمپيوټر ددوه برخو څخه جوړ شوی دی. ١- [[پوستکالي]] (سافټ وير) ٢- [[کلک کالي]] (هارډوير)
 پوستکالي (سافټ وير) کولاي شي په سترګو يي وګورۍ خو لمس کولای يې نه شئ چې د کمپيوټر ټول پروګرامونه د کمپيوټر پوستکالي دي.<br>کلک کالي (هارډ وير) کولاي شئ چې په سترګو وګورئ او لمس يې کړئ لکه [[Monitor]], [[CPU]], [[Keyboard]], [[Mouse]] او داسي نور.
