*Empty MediaWiki Message*

--- a/سولگر.mw
+++ b/سولگر.mw
@@ -79,3 +79,6 @@ Computer
 ( (Data کې کومه غلطي يا اشتباه نه وي نو کمپيوټر حسابي او منطقي مسايل پرته له کومې غلطۍ او اشتباه حلوي.يا په بل ډول ،کمپيوټر مسايل د پروګرام او لمړنيو ورکړل شوو معلوماتو ((Data پر بنسټ حلوي.
 
 له موږ سره مو اړیکه:
+
+
+[[en:Computer]]
