--- a/عبدالرحمان_بابا.mw
+++ b/عبدالرحمان_بابا.mw
@@ -4,6 +4,7 @@
 '''عبدالرحمان مومند''' چې د افغانستان او د پښتونخوا د بلبل په توګه يې ټول پښتانه پېژني. د پښتو ادب يو بې ساری صوفي شاعر وو. د هغه شاعري د ځانګړي سبک په لرلو سره د ټولو پښتنو د زړه څراغ بلل کېږي، دا ځکه چې په اورېدو سره يې د پښتنو زړونه روښانه کېږي. په پښتو ادب کې د عبدالرحمان بابا د شاعرۍ ونډه دغه ډګر جوت اغېزمن کړی او بډای کړی دی.
 
 == مخينه ==
+[[انځور:Rahmanbaba-Poem.jpg|thumb|200px|عبدالرحمن مومند]]
 کومه مينه او ښه پېژندګلوي چې عبدالرحمن بابا عُرف رحمن بابا ته ميلاؤ شوې ده هغه د ډېرو ښوښو شاعرانو په نصيب کې نشته. د پښتو بچئ بچئ رحمن بابا د يو ښه او ښايسته شاعر په حېث پېژني. د پښتنو کوڅه په کوڅه، کور په کور او کلي په کلي د رحمن بابا شعرونه وئيل کېږي. د رحمن بابا د شعرونو نه متلونه جوړ شوی دی. عالمان ئې او خطيبان ئې د جومات په منبر د آیاتونو د مطلب او تشرېح واضح کولو لپاره او ملنګان او دروېشان ئې په وجد اوسر کې وايي ځوانان ئې په حجرؤ او مجلسونو کې د منګي او رُباب سره شعرونه وائي او اوسيني خلق ئې په دفترونو او کاروباري ځايونو کې په چُرت او مزه کې د ځان سره د شونډؤ لاندې په ګُنګوسۍ کې وائي تردې پورې چې د سوات اخون باباجي عليه الرحمة هم د رحمن بابا د شاعرۍ بې حده زياته ستاينه کړې ده اړ دده د شاعرۍ سليس او د عوامو د خوښۍ برابر بللي دی. ددې دومره تعريفاتو نه پس هم دا ډېر د افسوس مقام دی چې د رحمن بابا د ژوند حالات لامکمل په تفصيل سره معلوم نه دي البته که مونږ د عبدالرحمن بابا په سوانح د علماؤ مُختلف مضمونونه وګورو نو مونږ وينو چې اکثر حالات خو هغوی يو شان ليکلي دي خو بيا هم يوه نيمه خبره ئې د بل نه سېوا ليکلې ده او همدغه شان که مونږ د ټولو سوانح نګارانو په رحمن بابا ليکلئ شوی سوانح وګورو نو کافي ډېر معلومات راجمع کېدائ شي. عبدالرحمن بابا په يويشتم د جمادي الثاني سنه ۱۰۳۸ هجري کې د پېښور سره نژدې په بهادر کلي کې پېدا شوی و. دا کلئ د پېښور سوېل خوا ته درې ميله ليرې د کوهاټ د سړک غاړې ته دی. د پلار نوم ئې عبدالستار و، دئ په اصل کې غوري خېل و، غوري خېل څه لاروي خلق نه و، بلکه د زمکو مالکان وه او ښه په تول پوره وه په دې وجه دا نظريه چې عبدالرحمن بابا بالکل غريب سړئ وه غلطه ده البته داوه چې خپله رحمن بابا له دُنيا سره مينه نه کوله، عبدالرحمن بابا پيدا شوی په بهادر کلي کې وه بيا په هزارخوانۍ کې استوګن شو په دې وجه بعضې مؤرخين ئې د بهادرکلي بولي اوځينې نور ئې د هزارخوانۍ، خو صحيح خبره همدغه ده کومه چې وليکلئ شوه. په کال ۱۰۴۵ هجري کې مشهورعالم عبدالحق رحمة الله عليه په بهادر کلي کې ميشته شو. دا عالم د متنۍ اوسېدؤنکئ وه. عبدالرحمن بابا د قرآن مجيد او د دين نور ابتدائي علوم دده مشهور عالم نه زده کړل. په کال ۱۰۵۲ هجري کې يو بل مشهور عالم د مولانا محمد يعقوب ځوی مولانا محمد يوسف عليه رحمة په پېښور کې استوګنه شروع کړه دی په اصل يوسفزئ وه، عبدالرحمن بابا ددغه عالم نه هم فېض ياب شو. ددې مشهور عالم نه ئې د فقهې او تصوف علم حاصل کړؤ. عبدالرحمن بابا تقريباً په ۱۰۵۴ هجري يا ۱۰۵۵ هجري کې د پېښور نه کوهاټ ته تشريف يوړلو او هلته ئې درويشت کاله عمرتېرکړؤ په خصوصي توګه نهه کاله عمر ئې په ځنګل خېل نومي کلي کې تېر کړی او پنځه لس کاله ئې په شېرکوټ نومي کلي کې تېرکړل، دلته ئې د حاجي بهادرخان عبدالله کوهاټي نقشبندي نه درس واخيستو او په کوهاټ کې عبدالرحمن بابا د دين ښه کلک عالم جوړ شو همدغلته رحمن بابا باندې د خدائ رحمت وشو او شاعري ئې شروع کړه، هغه شاعر چې ټول پښتانه او په پښتو ژبه پوهېدونکي غېرپښتانه ئې اوس پېژني.
 
 {{شعر}}
