*Empty MediaWiki Message*

--- a/کشور_سلطان.mw
+++ b/کشور_سلطان.mw
@@ -1,4 +1,4 @@
-{{delete|not only english but also a copyright violation from a newspaper}}
+{{ژباړل}}
 
 [[Image:KishwarSultan.PNG|thumb|289px|کشور سلطان]]
 
