*Empty MediaWiki Message*

--- a/لومړی_مخ.mw
+++ b/لومړی_مخ.mw
@@ -1,3 +1,4 @@
+{{ويکيپېډيا:لومړی مخ/سرليک|د ويکيپېډيا درنو ليکونکيو! د ويکيپېډيا د انګرېزي متنونو په ژباړلو کې زموږ سره مرسته وکړۍ}}
 {| style="width:100%; background-color:transparent;"
 |-
 | width="70%" style="vertical-align:top; border:1px solid #ccc; background:#fff; padding:.5em;" colspan="2" |
