*Empty MediaWiki Message*

--- a/پټوډي.mw
+++ b/پټوډي.mw
@@ -1,4 +1,4 @@
-پټوډي د هندوستان په ګورګاون ولسوالۍ، هرياڼا ولايت کې يو ښار (ټاون) دی. دا په تېرو وختونو کې یو شاهي هېواد هم پاتې شوی دی. دا شاهي هېواد په ۱۸۰۶ کې د يو پښتون اتل لخوا، چې فېض طلب خان نومېده، جوړ شوی وو او شاوخوا ۱۳۷ ک.م² سيمه کې پروت وو.
+پټوډي د هندوستان په ګورګاون ولسوالۍ، هرياڼا ولايت کې يو ښار (ټاون) دی. دا په تېرو وختونو کې یو ټولواک هېواد هم پاتې شوی دی. دا شاهي هېواد په ۱۸۰۶ کې د يو پښتون اتل لخوا، چې فېض طلب خان نومېده، جوړ شوی وو او شاوخوا ۱۳۷ ک.م² سيمه کې پروت وو.
 
 دا هېواد په ۷م اپرېل، ۱۹۴۸ کې د هندوستان سره يوځای کړی شو.
 
