--- a/اسلام.mw
+++ b/اسلام.mw
@@ -214,7 +214,7 @@ In Islam, the "[[normative]]" example of Muhammad's life is called the ''[[Sunna
 
 ===د قيامت ورځ===
 {{main|قيامت}}
-د "جزا په ورځ"، يعنی ''[[قيامت|د قيامت په ورځې]]'' ايمان لرل په اسلامه کې يوه بنسټيزه عقيده ده. They believe that the time of ''Qiyāmah'' is preordained by God but unknown to man. The trials and [[tribulation]]s preceding and during the ''Qiyāmah'' are described in the Qur'an and the [[hadith]], and also in the commentaries of [[Ulema|Islamic scholar]]s. The Qur'an emphasizes [[Resurrection of the Dead|bodily resurrection]], a break from the [[pre-Islamic Arabia]]n understanding of death. It states that resurrection will be followed by the gathering of mankind, culminating in their judgment by God.<ref>See:
+د "جزا په ورځ"، يعنی ''[[قيامت|د قيامت په ورځې]]'' ايمان لرل د اسلام يوه بنسټيزه ګروهه ده. مسلمانان په دې عقيده دي چې د قيامت ورځ د الله تعالی له خوا ټاکل شوی چې په يوه ځانګړي وخت کې به وي خو انسانانو ته يې وخت نه دی څرګند.   The trials and [[tribulation]]s preceding and during the ''Qiyāmah'' are described in the Qur'an and the [[hadith]], and also in the commentaries of [[Ulema|Islamic scholar]]s. The Qur'an emphasizes [[Resurrection of the Dead|bodily resurrection]], a break from the [[pre-Islamic Arabia]]n understanding of death. It states that resurrection will be followed by the gathering of mankind, culminating in their judgment by God.<ref>See:
 * "Resurrection", ''The New Encyclopedia of Islam'' (2003)
 * {{cite encyclopedia | title=Avicenna | encyclopedia=Encyclopaedia of Islam Online | accessdate=2007-05-02}}: Ibn Sīnā, Abū ʿAlī al-Ḥusayn b. ʿAbd Allāh b. Sīnā is known in the West as "Avicenna".
 * {{cite encyclopedia | title=Qiyama | encyclopedia=Encyclopaedia of Islam Online | author=L. Gardet | accessdate=2007-05-02}}</ref>
