/* Apostasy او کفر */

--- a/اسلام.mw
+++ b/اسلام.mw
@@ -271,10 +271,10 @@ Islamic law does not distinguish between "matters of church" and "matters of sta
 * Lewis (۲۰۰۳), p.۱۰۰</ref>
 
 
-====Apostasy او کفر====
-{{main|Apostasy in Islam}}
+====ارتداد او کفر====
+{{main|ارتداد په اسلام کې}}
 
-Local Islamic communities may exclude those they regard as [[apostasy|apostates]] and [[blasphemy|blasphemers]]. In Muslim-majority states, apostasy and blasphemy are considered crimes against the state and punished, sometimes with death.
+په سيمه ايزو اسلامي ټولنو کې چې يو وګړی په ارتداد او کفر پېژندل کېږي نو هغه بيا د هماغې ټولنې نه رټل کېږي. په اسلامي رياستونو کې ارتداد او کفر د اسلامي رياست پر وړاندې جرم ګڼل کېږي او داسې يو مجرم ته سزا ورکول کېږي چې اکثراً د مرګ  سزا وي.
 
 ==Denominations==
 {{main|Divisions of Islam}}
