/* مذهب او رياست */

--- a/اسلام.mw
+++ b/اسلام.mw
@@ -265,11 +265,10 @@ Islamic law covers all aspects of life, from matters of state, like governance a
 
 ====مذهب او رياست====
 
-Islamic law does not distinguish between "matters of church" and "matters of state"; the ulema function as both jurists and theologians. In practice, Islamic rulers frequently bypassed the Sharia courts with a parallel system of so-called "Grievance courts" over which they had sole control. As the Muslim world came into contact with Western secular ideals, Muslim societies responded in different ways. [[Turkey]] has been governed as a secular state ever since the reforms of [[Mustafa Kemal Atatürk]]. In contrast, the [[۱۹۷۹ Iranian Revolution]] replaced a mostly secular regime with an [[Islamic republic]] led by the [[Ruholla Khomeini|Ayatollah Ruholla Khomeini]].<ref>See:
+د اسلامي قانون له مخې د مذهب او رياست تر مېنځ ژورې اړيکې دي چې په ډېريو اسلامي هېوادونو کې ديني عالمان د قاضيانو په توګه په رسمي ډول دندې ترسره کوي. In practice, Islamic rulers frequently bypassed the Sharia courts with a parallel system of so-called "Grievance courts" over which they had sole control. As the Muslim world came into contact with Western secular ideals, Muslim societies responded in different ways. [[Turkey]] has been governed as a secular state ever since the reforms of [[Mustafa Kemal Atatürk]]. In contrast, the [[۱۹۷۹ Iranian Revolution]] replaced a mostly secular regime with an [[Islamic republic]] led by the [[Ruholla Khomeini|Ayatollah Ruholla Khomeini]].<ref>See:
 * Esposito (۲۰۰۴), p.۸۴
 * Lapidus (۲۰۰۲), pp.۵۰۲–۵۰۷٬۸۴۵
 * Lewis (۲۰۰۳), p.۱۰۰</ref>
-
 
 ====ارتداد او کفر====
 {{main|ارتداد په اسلام کې}}
