/* پينځه بنسټيزه ستنې */

--- a/اسلام.mw
+++ b/اسلام.mw
@@ -348,8 +348,8 @@ The [[Yazidi]], [[Druze]], [[Ahmadiyya Muslim Community| Ahmadiyya]], [[Bábís|
 ===پينځه بنسټيزه ستنې===
 {{main|Five Pillars of Islam}}
 
-[[Image:Arabic Plaque, Great Mosque, Xian.jpg|thumb|220px|right|Islam's basic creed (''[[shahadah]]'') written on a plaque in the [[Great Mosque of Xi'an]], [[China]]]]
-[[Image:Kabaa.jpg|thumb|right|220px|Rituals of the [[Hajj]] (pilgrimage) include walking seven times around the [[Kaaba]] in Mecca.]]
+[[Image:Arabic Plaque, Great Mosque, Xian.jpg|thumb|220px|left|Islam's basic creed (''[[shahadah]]'') written on a plaque in the [[Great Mosque of Xi'an]], [[China]]]]
+[[Image:Kabaa.jpg|thumb|left|220px|Rituals of the [[Hajj]] (pilgrimage) include walking seven times around the [[Kaaba]] in Mecca.]]
 
 [[The Five Pillars of Islam]] (Arabic: : اركان الدين) are five practices essential to Sunni Islam. Shi'a Muslims subscribe to eight ritual practices which substantially overlap with the Five Pillars.<ref>See:
 * Momem (۱۹۸۷), p.۱۷۸
@@ -385,8 +385,6 @@ The [[Yazidi]], [[Druze]], [[Ahmadiyya Muslim Community| Ahmadiyya]], [[Bábís|
 * {{cite encyclopedia | title=Hajj | encyclopedia=Encyclopaedia Britannica Online | accessdate=۲۰۰۷-۰۵-۰۲}}</ref>
 
 In addition to the ''khums'' tax, Shi'a Muslims consider three additional practices essential to the religion of Islam. The first is [[jihad]], which is also important to the Sunni, but not considered a pillar. The second is ''[[Amr-Bil-Ma'rūf]]'', the "Enjoining to Do Good", which calls for every Muslim to live a virtuous life and to encourage others to do the same. The third is ''[[Nahi-Anil-Munkar]]'', the "Exhortation to Desist from Evil", which tells Muslims to refrain from vice and from evil actions and to also encourage others to do the same.<ref>Momen (۱۹۸۷), p.۱۸۰</ref>
-
-
 
 ===اسلامي اداب او خواړه===
 
