--- a/اسلام.mw
+++ b/اسلام.mw
@@ -765,9 +765,9 @@ Islamic law divides non-Muslims into several categories, depending on their rela
 ;اکاډميکې سرچينې
 <div class="references-small"> 
 * [http://www.usc.edu/dept/MSA/ University of Southern California Compendium of Muslim Texts]
-* [http://philtar.ucsm.ac.uk/encyclopedia/islam/ Encyclopedia of Islam (Overview of World Religions)]
-* [http://arabworld.nitle.org/introduction.php?module_id=2 Unit on Islam] from the [[NITLE]] Arab Culture and Civilization Online Resource
-* [http://www.britannica.com/eb/article-9105852/Islam Islam], article at ''Enyclopaedia Britannica Online''
+* [http://philtar.ucsm.ac.uk/encyclopedia/islam/ د اسلام پوهنغونډ (د نړۍ د مذهبونو مخليدنه)]
+* [http://arabworld.nitle.org/introduction.php?module_id=2 د اسلام اړونده څپرکی] د [[NITLE]] څخه د عربي فرهنګ او تمدن پرليکه سرچينې
+* [http://www.britannica.com/eb/article-9105852/Islam اسلام], ''د بريټانيکا پرليکه پوهنغونډ'' ليکنه
 
 </div>   
 ;ټولګې
