--- a/بهايي.mw
+++ b/بهايي.mw
@@ -6,22 +6,7 @@
 دا لاروركه ډله د انګريزي استعمار په پير كې د نني ايران له خېټې څخه راوزېږېده. او د نړۍ پر مخ خپره شوه.
 بهايان د نړۍ په ډېرو نړېوالو غونډو كې خپل ګډون په زبات رسولې، چې لدې ډلې څخه د ملګرو ملتونو سازمان، د يونيسېف سازمان او د شنې سولې په سازمان كې كارنده ونډه لري.
 
-== د پېداېښت ځاى ==
-بهايي لاروركه ډله  لكه د نورو ډلو (برېلويت، قاديانت، بوهريت، احمديت) په څېر د ښكېلاګرو ځواكونو لخوا د [[مسلمان]]انو د كمزوري كولو لپاره جوړه شوې ډله ده، چې د خپلو بادارانو د ښكېلاكي موخو د بشپړولو لپاره د هغوي د لاس اله جوړه شوې ده. 
-دا ډله د مرزا حسين علي په لاس چې ځان يې په [[بهاءالله ]] نوماوه،  بنسټ اېښودل شوې ده.
-دا لاروركه ډله د انګريزي استعمار په پير كې د
-نني [[ايران]] له خېټې څخه راوزېږېده. او د نړۍ
-
-[[Image:Bahai shrine.jpg|thumb|250px|په  حیفا (اسرائیل) كې د [[مقام اعلی]] په نامه سپېڅلې ودانۍ
-]]
-
-پر مخ خپره شوه. د خپلو ناوړه او بې لارې ګروهو 
-خپرولو لپاره ساده ډوله [[مسلمان]]ان په چل او 
-دوكې سره خپل اړخ ته راماتوي، او په پاى كې يې 
-په بشپړ ډول په دام كې راګېرېږي. دا ساده ډوله [[مسلمان]]ان داسې خيال كوي چې دوي (بهاييان) به ددوي په څېر [[مسلمان]]ان وي، خو دا ګومان يې بېځايه وي. 
-كه څه هم دا ډله په خپلو بلنو كې د قرآن كريم ايتونه او نبوي وېناوې  رانقلوي او په خپل هګټه ترې كار اخلي، خو بيا هم د ټول [[مسلمان]] امت په ټولييز ډول دا ډله كافره ګرځولې او له[[ اسلام]] څخه يې جدا يوه ډله ګڼي. 
-زياتره پوهان پدې ګروهه دي، چې بهاييان له [[اسلام]] څخه بېله ډله (فرقه) نه بلكه يو بېله لار ([[مذهب]]) يا ([[دين]]) يا ډله ده، چې له[[ اسلام]] سره هېڅ سر او كار نلري. د اريانتيا خبره خو لا دا ده چې دا ډله له خپل كفر سره، سره، ټول [[مسلمان]]ه نړۍ (له بهاييانو څخه پرته) كافره بولي. 
-بټه دې نه وي، چې بهاييان خپلې زياتره ګروهې او اندود له نورو خلكو څخه پټ ساتي.
+عزيزان
 
 == بهاییان او باب ==
 د باب له مړينې څخه وروسته يې لارويان چې په (بابيانو) ياديده، د باب رسمي ځايناستي (مېرزا يحيى نوري) چې پدې ورځو كې د بغداد په لور تښېدلې ؤ راټول شول. يو څه وروسته د يحيى مشر ورور چې(مېرزا حسېن علي نوري) نومېده او هغه هم د ايراني [[بابيان]]و له ډلې څخه ؤ، له [[ايران]] څخه په تېښته بريالې او ځان يې د [[بغداد]] بابيانو ته چې دده د كوشني ورور تر مشرۍ لاندې راټول شوي ول، سره يوځاى شو. 
