--- a/اسلام.mw
+++ b/اسلام.mw
@@ -783,7 +783,7 @@ Islamic law divides non-Muslims into several categories, depending on their rela
 </div>
 ;اسلام او هنرونه
 <div class="references-small"> 
-* [http://www.bbc.co.uk/religion/religions/islam/ BBC Islam Focus]
+* [http://www.bbc.co.uk/religion/religions/islam/ پر اسلام د بي بي سي فوکس]
 * [http://www.lacma.org/islamic_art/intro.htm Islamic Art at the Los Angeles County Museum of Art]
 * [http://www.muslimheritage.com/ Muslim Heritage] (Foundation for Science Technology and Civilisation, UK)
 * [http://www.islamicarchitecture.org/ Islamic Architecture (IAORG)] illustrated descriptions and reviews of a large number of mosques, palaces, and monuments.
@@ -793,9 +793,9 @@ Islamic law divides non-Muslims into several categories, depending on their rela
 {{Religion-related topics}}
 {{featured article}}
 
-[[Category:اسلام| ]]
-[[Category:Monotheism]]
-[[Category:Theism]]
+[[وېشنيزه:اسلام| ]]
+[[وېشنيزه:Monotheism]]
+[[وېشنيزه:Theism]]
 
 {{Link FA|id}}
 {{Link FA|he}}
