--- a/اسلام.mw
+++ b/اسلام.mw
@@ -275,9 +275,9 @@ Islamic law covers all aspects of life, from matters of state, like governance a
 
 په سيمه ايزو اسلامي ټولنو کې چې يو وګړی په ارتداد او کفر پېژندل کېږي نو هغه بيا د هماغې ټولنې نه رټل کېږي. په اسلامي رياستونو کې ارتداد او کفر د اسلامي رياست پر وړاندې جرم ګڼل کېږي او داسې يو مجرم ته سزا ورکول کېږي چې اکثراً د مرګ  سزا وي.
 
-==Denominations==
-{{main|Divisions of Islam}}
-Islam consists of a number of [[religious denomination]]s that are essentially similar in belief but which have significant theological and legal differences. The primary division is between the [[Sunni Islam|Sunni]] and the [[Shi'a]], with [[Sufi]]sm generally considered to be a mystical inflection of Islam rather than a distinct school. According to most sources, approximately ۸۵٪ of the world's Muslims are Sunni and approximately ۱۵٪ are Shi'a, with a small minority who are members of other [[Islamic sects]].<ref>See:
+==مذهبي فرقې==
+{{main|د اسلام مذهبي فرقې}}
+لکه د نورو دينونو په شان په اسلام کې هم يو شمېر مذهبي فرقې شته چې د دوی ټولو ګروهه يا عقيده يوه ده خو په شرعي او قانوني توګه په دغو فرقو کې اهم توپيرونه ليدل کېږي. اسلام په دوه لويو فرقو وېشل شوی چې د سني او تشيع فرقې يې دوه لويې فرقې دي. تصوف بيا ځانته بله مذهبي ډله ده چې په دې کې د اسلام معمايي تصريف لور ته ډېر پام اړول شوی. د ځينو سرچينو له مخې د نړۍ نژدې ۸۵٪ مسلمانان د سني لويې فرقې په لار روان دي او پاتې ۱۵٪ مسلمانان د تشيع د مذهب مننونکي دي، په همدې توګه بيا په شيعه ګانو کې هم وړې مذهبي فرقې شته.<ref>See:
 * Esposito (۲۰۰۲b), p.۲
 * {{cite web | url=http://countrystudies.us/afghanistan/61.htm | title=Sunni and Shia Islam | work=Country Studies | publisher=U.S. Library of Congress | accessdate=۲۰۰۷-۰۱-۰۹}}</ref>
 
@@ -339,10 +339,6 @@ The [[Kharijites]] are a sect that dates back to the early days of Islam. The on
 * {{cite encyclopedia | title=al-Ibāḍiyya | encyclopedia=Encyclopaedia of Islam Online | accessdate=۲۰۰۷-۰۵-۰۲}}</ref>
 
 The [[Yazidi]], [[Druze]], [[Ahmadiyya Muslim Community| Ahmadiyya]], [[Bábís|Bábí]], [[Bahá'í Faith|Bahá'í]], [[Berghouata]] and [[Ha-Mim]] religions either emerged out of Islam or came to share certain beliefs with Islam. [[Sikhism]], founded by [[Guru Nanak]] in late fifteenth century [[Punjab region|Punjab]], incorporates aspects of both Islam and [[Hinduism]].<ref> Encyclopedia of Islam, "Sikhs" </ref>
-
-
-
-
 
 ==اسلامي فرضونه او عمل==
 ===پينځه بنسټيزه ستنې===
