--- a/اسلام.mw
+++ b/اسلام.mw
@@ -277,7 +277,7 @@ Islamic law covers all aspects of life, from matters of state, like governance a
 
 ==مذهبي فرقې==
 {{main|د اسلام مذهبي فرقې}}
-لکه د نورو دينونو په شان په اسلام کې هم يو شمېر مذهبي فرقې شته چې د دوی ټولو ګروهه يا عقيده يوه ده خو په شرعي او قانوني توګه په دغو فرقو کې اهم توپيرونه ليدل کېږي. اسلام په دوه لويو فرقو وېشل شوی چې د سني او تشيع فرقې يې دوه لويې فرقې دي. تصوف بيا ځانته بله مذهبي ډله ده چې په دې کې د اسلام معمايي تصريف لور ته ډېر پام اړول شوی. د ځينو سرچينو له مخې د نړۍ نژدې ۸۵٪ مسلمانان د سني لويې فرقې په لار روان دي او پاتې ۱۵٪ مسلمانان د تشيع د مذهب مننونکي دي، په همدې توګه بيا په شيعه ګانو کې هم وړې مذهبي فرقې شته.<ref>See:
+لکه د نورو دينونو په شان په اسلام کې هم يو شمېر مذهبي فرقې شته چې د دوی ټولو ګروهه يا عقيده يوه ده خو په شرعي او قانوني توګه په دغو فرقو کې اهم توپيرونه ليدل کېږي. اسلام په دوه لويو فرقو وېشل شوی چې د [[سني]] او [[تشيع]] فرقې يې دوه لويې فرقې دي. [[تصوف]] بيا ځانته بله مذهبي ډله ده چې په دې کې د اسلام معمايي تصريف لور ته ډېر پام اړول شوی. د ځينو سرچينو له مخې د نړۍ نژدې ۸۵٪ مسلمانان د سني لويې فرقې په لار روان دي او پاتې ۱۵٪ مسلمانان د تشيع د مذهب مننونکي دي، په همدې توګه بيا په شيعه ګانو کې هم وړې مذهبي فرقې شته.<ref>See:
 * Esposito (۲۰۰۲b), p.۲
 * {{cite web | url=http://countrystudies.us/afghanistan/61.htm | title=Sunni and Shia Islam | work=Country Studies | publisher=U.S. Library of Congress | accessdate=۲۰۰۷-۰۱-۰۹}}</ref>
 
