--- a/اسلام.mw
+++ b/اسلام.mw
@@ -311,7 +311,7 @@ The Shi'a consist of one major school of thought known as the [[Ithna 'ashariyah
 
 {{see also|Historic background of the Sunni-Shi'a split}}
 
-===صوفيت===
+===تصوف===
 {{main|تصوف}}
 
 Not strictly a denomination, [[Sufism]] is a mystical-ascetic form of Islam. By focusing on the more spiritual aspects of religion, Sufis strive to obtain direct experience of God by making use of "intuitive and emotional faculties" that one must be trained to use.<ref>Trimingham (۱۹۹۸), p.۱</ref> Sufism and [[Islamic law]] are usually considered to be complementary, although Sufism has been criticized by some Muslims for being an unjustified [[bidah|religious innovation]]. Most Sufi orders, or ''[[tariqa]]s'', can be classified as either Sunni or Shi'a.<ref>See:
