/* Religion as a social construction */

--- a/مذهب.mw
+++ b/مذهب.mw
@@ -33,7 +33,7 @@ There are a number of models regarding the ways in which religions come into bei
 
 The models are not mutually exclusive. Multiple models may be seen to apply simultaneously, or different models may be seen as applying to different religions.
 
-===Religion as a social construction===
+===مذهب د ټولنې جوړونکي په توګه===
 This group of [[model (abstract)|models]] holds that religion is a [[social construction]], rather than referring to actual [[supernatural]] phenomena; that is, phenomena beyond the [[nature|natural]] world that we measure using the [[scientific method]]. Some of these models view religion as nonetheless having or having had a mostly positive effect on society, the individual, and civilization itself, and others view it as having or having had a mostly injurious or destructive effect. Many of these views have their origins in the field of the [[sociology of religion]].
 
 Models that view religion as a social construction include the "[[Dogma Selection Model]]," which holds that religions, although untrue in themselves, encode instructions or habits useful for survival, and that these ideas "mutate" periodically as they are passed on, and spread or die out in accord with their effectiveness at improving chances for survival.  [[Karl Marx]] stated that "Religion is the opium of the people."  This comment spawned a new model, in which, summarizes [[Bertrand Russell]],  "[r]eligion in any shape or form is regarded as a pernicious and deliberate falsehood, spread and encouraged by rulers and clerics in their own interests, since it is easier to exercise control over the ignorant."<ref>''Wisdom of the West'', ISBN 0-517-69041-1</ref> Furthermore, the "[[Theory of Religion Model]]" states that religion arose from some [[psychology|psychological]] or [[morality|moral]] [[pathology]] in religious leaders and believers. Another theory states that spirit-based religions found in many indigenous tribes may originate in [[dreams]]. A dead person seen in a dream is, in some sense, not really dead, and so may be able to do good or harm. Some [[anthropology|anthropologists]] see in this the origin of a belief in [[ghosts]] and in those religions in which ancestors are worshiped.<ref>{{cite web | title =  Getting a Rational Grip on Religion: Is religion a fit subject for scientific scrutiny? | first = George | last = Johnson | url= http://www.sciam.com/article.cfm?chanID=sa006&articleID=00099B8B-DBD6-13A1-9BD683414B7F0000&colID=12 | accessdate = 2006-10-12 | date= 2006-01 | publisher = Scientific American}}</ref>
