--- a/مذهب.mw
+++ b/مذهب.mw
@@ -53,8 +53,8 @@ Other models see religion as absolutely and unchangingly true. They contrast wit
 
 ==Demographics==
 {{main|Major religious groups}}
-[[Image:Major religions 2005 pie small.png|thumb|250px|right]]
-[[Image:Worldreligion.png|thumb|250px|right|Dominant world religions, mapped by country.]]
+[[Image:Major religions 2005 pie small.png|thumb|250px|left]]
+[[Image:Worldreligion.png|thumb|250px|left|Dominant world religions, mapped by country.]]
 [[Image:Konchog-wangdu.jpeg|thumb|250px|[[Buddhist]] monk Geshe Konchog Wangdu reads [[Mahayana]] [[sutras]] from an old woodblock copy of the Tibetan Kanjur.]]
 
 ===Present day adherents===
