--- a/د_نړيوالو_اديانو_پرتله_اييزه_څېړنه.mw
+++ b/د_نړيوالو_اديانو_پرتله_اييزه_څېړنه.mw
@@ -4,7 +4,7 @@
 
 '''د نړيوالو اديانو پرتله اييزه څېړنه'''
 
-== '''د اديانو پرتله:''' ==
+== د اديانو پرتله ==
 مخكې لدې چې د اديانو په پرتله اييزه څېړنه څه وليكو، ښه به وي چې ځينې اصطلاحا وپېژنو.
 اديان: اديان د دين جمع ده چې د عربي ژبې څخه پښتو ته راغلې، دا اصطلاح په څلورو ماناؤ كارول كېږي:
 
