/* د مذهب او دين ترمنځ توپير: */

--- a/د_نړيوالو_اديانو_پرتله_اييزه_څېړنه.mw
+++ b/د_نړيوالو_اديانو_پرتله_اييزه_څېړنه.mw
@@ -16,20 +16,19 @@
 د دين د ويي دا ټولې ماناوې راغلي، لكه: حكم، بدل، قانون، سزاغ، مذهب، دستر، مسلك او لار. پدې اصطلاحاتو كې د (لازمي او اړين) مانا پرته ده.
 په قران كريم كې دين د ژوند د قانون، جزاء او سزا په ماناؤ رالې دى. مذدهب هم د دين د اصطلاح هممانا دى. دا هم د عربي ژبې اصطلاح ده، چې مانا يې د (تلو لار) ده مګر د مذهب اصطلاح د دين له اصطلاح په څېر پراخوالې نه لري. او نه هم د مذهب اصطلاح چېرې په قران كريم كې راغلې ده.
 
-== '''د مذهب او دين ترمنځ توپير:''' ==
-دا خبره بايد په ياد ولرو چې  د دين او مذهب د اصطلاحاتو  ترمنځ لږ څه توپير شته، په عام ډول چې د مذهب كوم تعريف شوې هغه د يو څه خيالاتو او افكارو څخه غږېږي، لكه څرنګه چې پروفېسور واېټ هېډ (Prof. WIte Head) داسې كړې دى.
+== د مذهب او دين ترمنځ توپير ==
+دا خبره بايد په ياد ولرو چې د دين او مذهب د اصطلاحاتو  ترمنځ لږ څه توپير شته، په عام ډول چې د مذهب كوم تعريف شوې هغه د يو څه خيالاتو او افكارو څخه غږېږي، لكه څرنګه چې پروفېسور واېټ هېډ (Prof. WIte Head) داسې كړې دى.
 (مذهب د ګروهې د هغه قوت نوم دى چې د هغې په وسيله انسان ته د نننۍ سپېڅلتيا ترلاسه كېږي).
 
 ''دارنګه پروفېسور ټپلر د مذهب پېژندنه داسې كوي:''
 (روحاني هستيو باندې ايمان ا واعتقاد لرل).
-برونائېټ داسې وايي: ( مذهب د ګروهې د هغه قوت نوم دى، چې په هغې ك دا توان شته ترڅو هغه د انسان او انساني كړو وړو كې بدلون راولي.
+برونائېټ داسې وايي: ( مذهب د ګروهې د هغه قوت نوم دى، چې په هغې كې دا توان شته ترڅو هغه د انسان او انساني كړو وړو كې بدلون راولي.
 پدې شرط چې له اخلاص او بصيرت څخه كار واخيستل شي). 
 
-لنډه دا چې مذهب د روحانيت ، اخلاق او ګروهې د ګړيو ترمنځ راچاپېره دى، مر دين بيا له دې څخه ډېر زيات پراخ او وسېع دى.
-په قران كريم كې د دين د يوه جامع مانا لرونكي اصطلاح په ځاى راغلې، او لدې څخه موخه د ژوند يو داسې نظام او لار ده، چې په هغه كې د انسان د توان او طاقت سرچينه او اقتدار اعلى يواځې د الله تعالى ذلت وي، او هغه منل او د هغه په لارښ،ونهو خپل ژوند برابرول وي. د هغه په پيروۍ سره به د جنت او ښو بدلو وركولو امېد وي، او ده هغ په نافرمانۍ سره د ذلت، خوارۍ غضب او  د دوزخ وېره پرې راخپره شي.
+لنډه دا چې مذهب د روحانيت ، اخلاق او ګروهې د ګړيو ترمنځ راچاپېره دى، خو دين بيا له دې څخه ډېر زيات پراخ او وسېع دى.
+په قران كريم كې د دين د يوه جامع مانا لرونكي اصطلاح په ځاى راغلې، او لدې څخه موخه د ژوند يو داسې نظام او لار ده، چې په هغه كې د انسان د توان او طاقت سرچينه او اقتدار اعلى يواځې د الله تعالى ذات وي، او هغه منل او د هغه په لارښ،ونهو خپل ژوند برابرول وي. د هغه په پيروۍ سره به د جنت او ښو بدلو وركولو امېد وي، او ده هغ په نافرمانۍ سره د ذلت، خوارۍ غضب او  د دوزخ وېره پرې راخپره شي.
 
 نو لدې امله د دين اصطلا ح د ژوند په ټولو څانګو كې خپل اساسي رول لوبوي او دا اصطلاح د مذهب له اصطلاح څخه پراخه مانا لرونكې ده.
- 
 
 == '''نو د دين اصطلاحي مانا داسې كوو چې:''' ==
 (دا د الله تعالى هغه ټاكل شوې او غوره شوې قانون، لار او د ژوند ذريقه ده چې  عقل او پوهې خاوندانو ته د محمد صلى الله عليه وسلم ورمخكې كړې د عمل كولو د لاېحې دعوت او ښوونه كوي، او پدې ډول د انسان (كه هغه ټولنيز وي كه څانګړې) د ژوند كولو لپاره د يو تل پاتې مشال په څېر دى.
