--- a/د_نړيوالو_اديانو_پرتله_اييزه_څېړنه.mw
+++ b/د_نړيوالو_اديانو_پرتله_اييزه_څېړنه.mw
@@ -30,9 +30,8 @@
 
 نو لدې امله د دين اصطلا ح د ژوند په ټولو څانګو كې خپل اساسي رول لوبوي او دا اصطلاح د مذهب له اصطلاح څخه پراخه مانا لرونكې ده.
 
-== '''نو د دين اصطلاحي مانا داسې كوو چې:''' ==
+== د دين اصطلاحي مانا ==
 (دا د الله تعالى هغه ټاكل شوې او غوره شوې قانون، لار او د ژوند ذريقه ده چې  عقل او پوهې خاوندانو ته د محمد صلى الله عليه وسلم ورمخكې كړې د عمل كولو د لاېحې دعوت او ښوونه كوي، او پدې ډول د انسان (كه هغه ټولنيز وي كه څانګړې) د ژوند كولو لپاره د يو تل پاتې مشال په څېر دى.
-
 
 == '''د اديانو د پرتله اييزې څېړنې څخه موخه څه ده؟''' ==
 د كوم شي ښۀ او بد مالومولو لپاره چې كله څړنه كېږي، نو لومړې بايد دا مالومه كړاى شسي چې هغه شې پخپله څرنګه دى؟ او بيا ددې خبرې مالومول چې دا شې د نورو شيانو څخه په كومه پوړۍ كې راځي؟ كله چې له دې دواړو خوو څخه كوم شې ښه په زبات ورسي، نو بيا هغه ته د خوښې سند وركول كېداى شي. همدا ډول د اديانو په پرتله اييزه څېړنه كې هم له دې ډول څېړنې څخه كار اخيستل كېږي.
